--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 
 Prueba 1/
 Prueba 2/
+Código/env/Lib/site-packages/charset_normalizer/md.cp312-win_amd64.pyd
+Código/env/Lib/site-packages/charset_normalizer/md__mypyc.cp312-win_amd64.pyd
